<resources>
    <string name="app_name">Poke App</string>
    <string name="text_search">Search</string>
    <string name="text_pokedex">Pokedex</string>
    <string name="text_discover">Discover</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_search_title">What Pokemon are you looking for?</string>
    <string name="text_stats">STATS</string>
    <string name="text_add_pokemon">Add Pokemon</string>
    <string name="text_hp">HP</string>
    <string name="text_attack">ATTACK</string>
    <string name="text_defense">DEFENSE</string>
    <string name="text_pokedex_title">YOUR \nPOKEDEX</string>
    <string name="text_discover_pokemons">Dicover new pokemons</string>
    <string name="text_details">Pokemon details</string>
    <string name="text_special_attack">SPECIAL ATTACK</string>
    <string name="text_special_defense">SPECIAL DEFENSE</string>
    <string name="text_speed">SPEED</string>

    <string name="number">#%1$s</string>
</resources>